# DesignMCP

./: .env.example  .gitignore  README.md  pyproject.toml  test_tool.py
mcp_server/: main.py
mcp_server/data/: fallback_data.py
mcp_server/services/: cache.py  formatter.py  parser.py  scraper.py
mcp_server/tools/: ui_inspiration.py
mcp_server/utils/: logging.py
tests/: __init__.py  test_cache.py  test_formatter.py  test_parser.py  test_tool.py
