[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-inspiration-mcp"
version = "1.0.0"
description = "MCP server that provides UI/UX design inspiration to AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "ui", "ux", "design", "ai", "agent"]

dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "tinyfish>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ui-inspiration-mcp = "mcp_server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100
